# opensight

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Procfile  README.md  REPOSITORY_CHECKLIST.md  pyproject.toml  requirements-dev.txt  requirements.txt  resume_entry.md  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Dockerfile  streamlit_app.py  style.css
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: ingest.py
backend/app/etl/flows/: main_flow.py
backend/app/etl/processors/: currency.py  deduplication.py
backend/app/insights/: generator.py
backend/app/models/: base.py  sales_event.py
backend/app/services/: kpi_service.py
config/: Dockerfile  docker-compose.yml
docs/: deploy_free.md  how_to_use.md
docs/architecture/: system_design.md
docs/guides/: deployment.md  getting_started.md
infra/: docker-compose.yml
report/: generate_report.py
report/templates/: report.html
sample_data/: sme_sample.csv
src/backend/: generate_report.py  main.py
src/backend/api/endpoints/: ingest.py
src/backend/core/: config.py
src/backend/etl/processors/: validation.py
src/backend/models/: raw.py
src/backend/services/: kpi_service.py
